[package]
name = "polimec-node"
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
hex-literal.workspace = true
color-print = "0.3.5"
futures.workspace = true

# Local
politest-runtime.workspace = true
polimec-runtime.workspace = true
pallet-funding.workspace = true
macros = { workspace = true }

# Substrate
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true
frame-support.workspace = true
pallet-transaction-payment-rpc.workspace = true
sc-basic-authorship.workspace = true
sc-chain-spec.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-offchain.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-rpc.workspace = true
sc-service.workspace = true
sc-sysinfo.workspace = true
sc-telemetry.workspace = true
sc-tracing.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-network-sync.workspace = true
sp-api.workspace = true
sp-io.workspace = true
sp-block-builder.workspace = true
sp-blockchain.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-keystore.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true
substrate-frame-rpc-system.workspace = true
substrate-prometheus-endpoint.workspace = true

# Polkadot
polkadot-cli.workspace = true
polkadot-primitives.workspace = true
xcm.workspace = true

# Cumulus
cumulus-client-cli.workspace = true
cumulus-client-collator.workspace = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-proposer.workspace = true
cumulus-client-service.workspace = true
cumulus-primitives-core.workspace = true
cumulus-relay-chain-interface.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
fast-mode = [ "polimec-runtime/fast-mode", "politest-runtime/fast-mode" ]
instant-mode = [
	"polimec-runtime/instant-mode",
	"politest-runtime/instant-mode",
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-funding/runtime-benchmarks",
	"polimec-runtime/runtime-benchmarks",
	"politest-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-funding/try-runtime",
	"polimec-runtime/try-runtime",
	"politest-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
std = [
	"cumulus-primitives-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"log/std",
	"pallet-funding/std",
	"polkadot-primitives/std",
	"serde/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-timestamp/std",
	"xcm/std",
]
on-chain-release-build = [
	"polimec-runtime/on-chain-release-build",
	"politest-runtime/on-chain-release-build",
]
async-backing = [ "politest-runtime/async-backing" ]
