[package]
name = "polimec-node"
description = "Polimec Node"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
build = "build.rs"

[lints]
clippy.all = "allow"
clippy.pedantic = "allow"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server"] }
log.workspace = true
serde_json.workspace = true
hex-literal.workspace = true
color-print.workspace = true
futures.workspace = true

# Local
polimec-runtime.workspace = true
pallet-funding.workspace = true
polimec-common.workspace = true

# Substrate
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true
pallet-transaction-payment-rpc.workspace = true
sc-basic-authorship.workspace = true
sc-chain-spec.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-offchain.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-rpc.workspace = true
sc-service.workspace = true
sc-sysinfo.workspace = true
sc-telemetry.workspace = true
sc-tracing.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-network-sync.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-blockchain.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-keyring.workspace = true
sp-keystore.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true
substrate-frame-rpc-system.workspace = true
substrate-prometheus-endpoint.workspace = true

# Polkadot
polkadot-cli.workspace = true
polkadot-primitives.workspace = true
xcm.workspace = true

# Cumulus
cumulus-client-cli.workspace = true
cumulus-client-collator.workspace = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-proposer.workspace = true
cumulus-client-service.workspace = true
cumulus-primitives-core.workspace = true
cumulus-relay-chain-interface.workspace = true
itertools.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
fast-mode = [ "polimec-runtime/fast-mode" ]
instant-mode = [ "polimec-runtime/instant-mode" ]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"pallet-funding/runtime-benchmarks",
	"polimec-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"polimec-common/runtime-benchmarks"
]
try-runtime = [
	"pallet-funding/try-runtime",
	"polimec-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
	"polimec-common/try-runtime"
]
on-chain-release-build = [ "polimec-runtime/on-chain-release-build" ]
development-settings = [ "polimec-runtime/development-settings" ]
