[package]
name = "polimec-standalone-node"
description = 'Polimec Node'
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
sc-cli = { workspace = true }
sp-core.workspace = true
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-telemetry.workspace = true
sc-keystore.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-consensus-aura.workspace = true
sp-consensus-aura.workspace = true
sp-consensus.workspace = true
sc-consensus.workspace = true
sc-client-api.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
frame-system.workspace = true
pallet-transaction-payment.workspace = true
sc-chain-spec.workspace = true

# These dependencies are used for the node's RPCs
jsonrpsee = { workspace = true, features = ["server"] }
sc-rpc.workspace = true
sp-api.workspace = true
sc-rpc-api.workspace = true
sp-blockchain.workspace = true
sp-block-builder.workspace = true
sc-basic-authorship.workspace = true
substrate-frame-rpc-system.workspace = true
pallet-transaction-payment-rpc.workspace = true

# These dependencies are used for runtime benchmarking
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true

# Local Dependencies
polimec-standalone-runtime.workspace = true

# CLI-specific dependencies
try-runtime-cli = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "polimec-standalone-runtime/runtime-benchmarks",
  "sc-service/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-system/try-runtime",
  "polimec-standalone-runtime/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "try-runtime-cli",
]