[package]
name = 'pallet-credentials'
description = 'FRAME pallet handle credentials'
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
parity-scale-codec = {  workspace = true, features = [
    "derive",
] }
scale-info = { workspace = true, features = ["derive"] }

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }
# Substrate dependencies
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
polimec-traits.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
pallet-balances.workspace = true

[features]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "polimec-traits/try-runtime",
]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "polimec-traits/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "parity-scale-codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "pallet-balances/std",
    "polimec-traits/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "frame-benchmarking?/std",
]
