[package]
name = "pallet-democracy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet for democracy"
readme = "README.md"

[lints]
clippy.all = "allow"
clippy.pedantic = "allow"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = {workspace = true, features = ["derive"], optional = true}
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-io.workspace = true
pallet-balances.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
pallet-scheduler.workspace = true
pallet-preimage.workspace = true

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"serde?/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-scheduler/try-runtime",
	"sp-runtime/try-runtime",
]
