[package]
name = "pallet-dispenser"
description = "Polimec Dispenser Logic"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
# Substrate
frame-benchmarking = { workspace = true, optional = true}
frame-support.workspace = true
frame-system.workspace = true

polimec-common.workspace = true
polimec-common-test-utils.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-io.workspace = true
sp-runtime.workspace = true
pallet-balances.workspace = true
pallet-timestamp.workspace = true
pallet-vesting.workspace = true

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"parity-scale-codec/std",
	"polimec-common-test-utils/std",
	"polimec-common/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"polimec-common-test-utils/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
	"polimec-common-test-utils/try-runtime",
	"polimec-common/try-runtime",
	"sp-runtime/try-runtime",
]
