[package]
name = "pallet-faucet"
description = "Polimec Faucet logic"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.6.5", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [
	"derive",
] }

# Substrate
frame-benchmarking = { workspace = true, optional = true}
frame-support.workspace = true
frame-system.workspace = true

polimec-common.workspace = true
polimec-common-test-utils.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
pallet-balances.workspace = true
pallet-timestamp.workspace = true
pallet-vesting.workspace = true

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-vesting/std",
	"polimec-common/std",
    "polimec-common-test-utils/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"polimec-common-test-utils/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-vesting/try-runtime",
	"polimec-common/try-runtime",
	"sp-runtime/try-runtime",
]
